<resources>
    <string name="app_name">SnapchatClone</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="switch_to_sign_up">Don\'t have an account? Sign up!</string>
    <string name="switch_to_login">Have an account? Login!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">E-Mail</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="sign_up_success">You have successfully signed up</string>
    <string name="email_password_empty">Email and password must not be empty</string>
    <string name="email_password_too_short">Password must not be shorter than 3 characters</string>
    <string name="login_success">You have successfully logged in</string>
    <string name="logout">Logout</string>
    <string name="logout_successful">You have successfully logged out</string>
    <string name="new_snap">New snap</string>
    <string name="snap_preview">Snap Preview</string>
    <string name="choose_image">Choose image</string>
    <string name="note">Note</string>
    <string name="next">Next</string>
    <string name="choose_image_unsuccessful">Error with choosing image</string>
    <string name="note_text_blank_error">Note text must not be blank</string>
    <string name="read_external_storage_permission_granted">Permission for reading external storage granted</string>
    <string name="read_external_storage_permission_denied">Permission for reading external storage denied</string>
    <string name="photo_upload_failure">Error with photo upload</string>
    <string name="photo_upload_success">Photo successfully uploaded</string>
    <string name="snap_image">Snap Image</string>
    <string name="image_download_unsuccessful">Image download unsuccessful</string>
    <string name="no_snaps_available">No snaps available</string>
    <string name="empty_view_image">Empty view image</string>
    <string name="choose_recipient">Choose recipient</string>
    <string name="snap_sent">Snap sent</string>
    <string name="no_users_available">No users available</string>
    <string name="received_snaps">Received snaps</string>
    <string name="snap_details">Snap details</string>
    <string name="snap_deleted">Snap deleted</string>
    <string name="app_logo">App logo</string>
    <string name="send_snap">Send a snap</string>
</resources>
